--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,68 +1,41 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: -apple-system, BlinkMa  cSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  --login-background-color: #eeeeee;
+  --bars-background-color: #fbfbfb;
+  --darker-gray-color: #2b2b2b;
+  --dark-gray-color: #444444;
+  --dark-medium-gray-color: #616161;
+  --medium-gray-color: #979797;
+  --medium-light-gray-color: #cacaca;
+  --light-gray-color: #e8e8e8;
+  --shaded-white-color: #f0f0f0;
+  /* --darker-component-color: #371274;
+  --dark-component-color: #5727A3;
+  --medium-component-color: #7d55be;
+  --light-component-color: #D6C5F0;
+  --light-component-hover-color: #efe5fd;
+  --lighter-component-color: #f9f4ff;
+  --dark-button-color: #5d31a5;
+  --light-button-color: #7d55be; */
+  --darker-component-color: #a30000; /* #700000 */
+  --dark-component-color: #DA251C;
+  --medium-component-color: #d65050;
+  --light-component-color: #f0c5c5;
+  --light-component-hover-color: #ffeaea; /* #fde5e5 */
+  --light-component-selected-color: #ffd7d7;
+  --lighter-component-color: #fff4f4;
+  --dark-button-color: #DA251C;
+  --light-button-color: #d65050;
+  /* AMS ERP */
+  color: #252525;
+  background:#F2F4FB ;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
