--- a/app.css
+++ b/app.css
@@ -234,7 +234,7 @@ a.movie-item:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    color: var(--text-color);
+    color: var(--text-color) !important;
     display: flex;
 }
 
@@ -527,6 +527,7 @@ footer a.logo:hover {
 
 footer .content {
     margin-top: 40px;
+    font-size: 18px;
 }
 
 .footer-menu {
@@ -543,9 +544,9 @@ footer .content {
 }
 
 .copyright {
-    padding: 10px;
+    padding: 30px;
     border-top: 1px solid var(--body-bg);
-    background-color: var(--box-bg);
+    background-color: var(--main-color);
     text-align: center;
 }
 
@@ -608,12 +609,16 @@ footer .content {
         position: absolute;
         top: 100%;
         left: -100%;
-        background-color: #000000;
+        background-color: var(--box-bg);
         flex-direction: column;
         width: 80%;
         height: 100vh;
         padding: 20px;
         transition: 0.3s ease-in-out;
+    }
+
+    .nav a {
+        color: var(--text-color);
     }
 
     .nav-menu li {
